--- a/en/index.html
+++ b/en/index.html
@@ -15,9 +15,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
+        <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
         <link type="text/plain" rel="author" href="../humans.txt" />
         <link rel="canonical" href="http://braziljs.com.br" />
-
+        
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -32,6 +33,9 @@
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 		
+		<meta itemprop="startDate" content="2013-09-22" />
+        <meta itemprop="endDate" content="2013-09-23" />
+		
         <link rel="alternate" hreflang="pt-br" href="http//braziljs.com.br" />		
 
     </head>
@@ -40,7 +44,7 @@
     		<span id="modal"></span>
     		<nav id="menu">
     			<span class="menu-switch ico-general">&nbsp;</span>
-    			<a class="language" href="//braziljs.com.br" title="Go to the portuguese version"><span class="ico-general ballon">PT</span></a>
+    			<a class="language" href="//braziljs.com.br" title="Vá para a versão em português!"><span class="ico-general ballon">PT</span></a>
     			<ul class="chapters-list">
     				<li class="speakers">
     					<a href="#heroes" title="Know more about our speakers"><span class="ir ico-general sign">Speakers</span></a>
@@ -995,6 +999,13 @@
                                 </tr>                                                                                                                                                                                                                                                                                                                                                                                                
                             </tbody>
                         </table>
+                        <div class="mozilla-hackday">
+                            <h3 class="logo ir">Firefox OS - APP Workshop</h3>                          
+                            <div class="info">
+                                <p class="description">The Firefox OS Workshop is an invite-only event with the purpose of assisting developers to port existing web apps into the Firefox Marketplace, create new ones, and make sure they run on Firefox OS.  Apply soon, there is limited space!</p>
+                                <a rel="external" class="apply" href="https://mozhacks.wufoo.com/forms/firefox-os-app-workshop-apply-here/" title="apply here for the workshop">apply</a>                              
+                            </div>
+                        </div>                        
 					</div>
 				</section>
 				<section id="locale">
@@ -1028,7 +1039,7 @@
 						<span class="pigies pig-1">&nbsp;</span>
 						<span class="pigies pig-2">&nbsp;</span>
 						<span class="pigies pig-3">&nbsp;</span>
-						<p class="disclaimer">Get your ticket for the biggest javascript conference in the universe. Unseen content, renowned speakers, and rich networking.</p>
+						<p class="disclaimer">Get your ticket for the largest javascript conference in the universe. Unseen content, renowned speakers, and rich networking.</p>
 						<a href="http://eventick.com.br/braziljs-2013" class="buy" title="Buy your ticket here!" rel="external">
 							<strong class="ttl-general ir">Buy your ticket!</strong>
 						</a>
@@ -1067,6 +1078,12 @@
                                     </strong>
                                     <p class="about">A global leader in wireless innovation, BlackBerry® revolutionized the mobile industry when it was introduced in 1999. Today, BlackBerry aims to inspire the success of our millions of customers around the world by continuously pushing the boundaries of mobile experiences. Founded in 1984 and based in Waterloo, Ontario, BlackBerry operates offices in North America, Europe, Asia Pacific and Latin America. BlackBerry is listed on the NASDAQ Stock Market (NASDAQ: BBRY) and the Toronto Stock Exchange (TSX: BB). For more information, visit www.blackberry.com</p>
                                 </li>
+                                <li class="w3c">
+                                    <strong class="sponsor">
+                                        <a href="//http://www.w3c.br" rel="external" title="visite o site da W3C Brasil" class="sponsors-general">W3C Brasil</a>    
+                                    </strong>                                    
+                                    <p class="about">The World Wide Web Consortium (W3C) is an international community that develops open standards to ensure the long-term growth of the Web.</p>
+                                </li>                                 
                             </ul>
                         </div>
                         <div class="sponsors gold">
@@ -1114,7 +1131,7 @@
                                 </li>                                
                             </ul>
                         </div>
-                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor to!<a href="mailto:contato@braziljs.org" title="Talk to us!"> Get in touch!</a></p>
+                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor too!<a href="mailto:contato@braziljs.org" title="Talk to us!"> Get in touch!</a></p>
                         <div class="supporters educational">
                             <h3 class="ir ttl-general">Educational support:</h3>
                             <ul>
@@ -1129,6 +1146,8 @@
                                 <li><a href="//www.abradi-rs.com.br" title="ABRADI-RS" class="abradi ir" rel="external">ABRADI-RS</a></li>
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
+                                <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
+                                <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
@@ -1149,13 +1168,13 @@
 							<p class="resume">Javascript enthusiast, <span itemprop="jobTitle">senior system analyst </span> at <span itemprop="worksFor">Terra Networks</span>, has 8 years of experience in web development, curator of BrazilJS and RSJS.</p>
 							<ul class="social-networks">
 								<li>
-									<a class="github ir ico-general" href="https://github.com/jaydson" title="Acesse o gitHub de Jaydson Gomes" rel="external">gitHub</a>
+									<a class="github ir ico-general" href="https://github.com/jaydson" title="Jaydson Gomes GitHub" rel="external">gitHub</a>
 								</li>
 								<li class="twitter">
-									<a class="twitter ir ico-general" href="https://twitter.com/jaydson" title="Acesse o twitter de Jaydson Gomes" rel="external">twitter</a>
+									<a class="twitter ir ico-general" href="https://twitter.com/jaydson" title="Jaydson Gomes Twitter" rel="external">twitter</a>
 								</li>
 								<li class="blog">
-									<a class="blog ir ico-general" href="http://jaydson.org" title="Acesse o Blog do Jaydson" rel="external">jaydson.org</a>
+									<a class="blog ir ico-general" href="http://jaydson.org" title="Jaydson's blog" rel="external">jaydson.org</a>
 								</li>
 							</ul>
 							<span class="photo">&nbsp;</span>
