--- a/speakers/alexandre.html
+++ b/speakers/alexandre.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/alexandre.html" />
         <meta property="og:type" content="Website" /> 
         <meta property="og:title" content="Alexandre Gaigalas - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
