--- a/en/index.html
+++ b/en/index.html
@@ -1095,6 +1095,12 @@
                                     </strong>
                                     <p class="about">A Liferay é líder mundial em soluções para portais horizontais de colaboração social de código aberto. Reconhecida pelo Gartner em seu Quadrante Mágico como líder, possui escritórios físicos em mais de 14 países ao redor do mundo. No Brasil os escritórios estão em São Paulo e Recife, responsáveis por atender toda a América Latina.</p>
                                 </li>
+                                <li class="google">
+                                    <strong class="sponsor">
+                                        <a href="//developers.google.com/chrome/" rel="external" title="visit Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
+                                    </strong>                                    
+                                    <p class="about">Google Inc. is an American multinational corporation specializing in Internet-related services and products. These include search, cloud computing, software and online advertising technologies. Most of its profits are derived from AdWords.</p>
+                                </li>                                 
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1107,10 +1113,10 @@
                                     <a href="https://www.heroku.com" rel="external" title="Know more about Heroku" class="sponsor heroku" rel="external"><span class="heroku sponsors-general">Heroku</span></a>
                                 </li>
                                 <li>
-                                    <a href="mailto:contato@braziljs.org" title="Wanna be a sponsor? Talk to us!" class="sponsor join-us">&nbsp;</a>
+                                    <a href="mailto:contato@braziljs.com.br" title="Wanna be a sponsor? Talk to us!" class="sponsor join-us">&nbsp;</a>
                                 </li>
                                 <li>
-                                    <a href="mailto:contato@braziljs.org" title="Wanna be a sponsor? Talk to us!" class="sponsor join-us">&nbsp;</a>
+                                    <a href="mailto:contato@braziljs.com.br" title="Wanna be a sponsor? Talk to us!" class="sponsor join-us">&nbsp;</a>
                                 </li>
                             </ul>
                         </div>
@@ -1127,11 +1133,11 @@
                                     <a href="//caelum.com.br" rel="external" title="Caelum - Ensino e Inovação" class="sponsor" rel="external"><span class="caelum sponsors-general">Caelum</span></a>
                                 </li>
                                 <li>
-                                    <a href="mailto:contato@braziljs.org" title="Wanna be a sponsor? Talk to us!" class="sponsor join-us">&nbsp;</a>
-                                </li>                                
+                                    <a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="sponsor treinaweb"><span class="treinaweb sponsors-general">TreinaWeb</span></a>
+                                </li>                               
                             </ul>
                         </div>
-                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor too!<a href="mailto:contato@braziljs.org" title="Talk to us!"> Get in touch!</a></p>
+                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor too!<a href="mailto:contato@braziljs.com.br" title="Talk to us!"> Get in touch!</a></p>
                         <div class="supporters educational">
                             <h3 class="ir ttl-general">Educational support:</h3>
                             <ul>
@@ -1145,9 +1151,9 @@
                                 <li><a href="//www.eventick.com.br" title="Eventick" class="eventick ir" rel="external">Eventick</a></li>
                                 <li><a href="//www.abradi-rs.com.br" title="ABRADI-RS" class="abradi ir" rel="external">ABRADI-RS</a></li>
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
-                                <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
-                                <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
+                                <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
+                                <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
