--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,12 @@
                                     </strong>                                    
                                     <p class="about">A Liferay é líder mundial em soluções para portais horizontais de colaboração social de código aberto. Reconhecida pelo Gartner em seu Quadrante Mágico como líder, possui escritórios físicos em mais de 14 países ao redor do mundo. No Brasil os escritórios estão em São Paulo e Recife, responsáveis por atender toda a América Latina.</p>
                                 </li>
+                                <li class="google">
+                                    <strong class="sponsor">
+                                        <a href="//developers.google.com/chrome/" rel="external" title="visite o site do Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
+                                    </strong>
+                                    <p class="about">Google Inc. é uma multinacional Norte Americana especializada em produtos e serviços relacionados a internet. Esses serviços incluem busca, cloud computing, software e tecnologias de anuncios online. A maior parte do seu lucro é oriundo dos AdWords.</p>
+                                </li>                                
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1130,10 +1136,10 @@
                                 </li>                                
                                 <li>
                                     <a href="//caelum.com.br" rel="external" title="Caelum - Ensino e Inovação" class="sponsor" rel="external"><span class="caelum sponsors-general">Caelum</span></a>
-                                </li>                                
+                                </li>
                                 <li>
-                                    <a href="mailto:contato@braziljs.com.br" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>                                    
-                                </li>                                
+                                    <a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="sponsor treinaweb"><span class="treinaweb sponsors-general">TreinaWeb</span></a>
+                                </li>
                             </ul>
                         </div>
                         <p class="be-a-sponsor">Também deseja fazer parte da nossa história? Seja um patrocinador do #BrazilJS2013! <a href="mailto:contato@braziljs.com.br" title="participe você também!">Entre em contato!</a></p>                        
@@ -1150,9 +1156,9 @@
                                 <li><a href="//www.eventick.com.br" title="Eventick" class="eventick ir" rel="external">Eventick</a></li>
                                 <li><a href="//www.abradi-rs.com.br" title="ABRADI-RS" class="abradi ir" rel="external">ABRADI-RS</a></li>
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
-                                <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
-                                <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
+                                <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
+                                <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                             </ul>
                         </div>                                                
                     </div>          				    
