Changes to images and texts

--- a/en/index.html
+++ b/en/index.html
@@ -809,8 +809,12 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Renato Mangini</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">Where modern front-end tooling has gone</em>
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>When you move from demos and samples to a real app in a real company, you need a good set of tools. In special front-end development, with its populated universe of tools, frameworks and libraries. In this talk, we will learn about Yeoman, a gentle English worker that can help you with the ingrate but very important backstage work of connecting and moving the inner gears that allow your app to shine.</p>                                                                                        
+                                        </div>                                        
                                     </td>                                   
                                 </tr>
                                 <tr class="event">
@@ -1099,7 +1103,7 @@
                                     <strong class="sponsor">
                                         <a href="//developers.google.com/chrome/" rel="external" title="visit Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>                                    
-                                    <p class="about">Google Inc. is an American multinational corporation specializing in Internet-related services and products. These include search, cloud computing, software and online advertising technologies. Most of its profits are derived from AdWords.</p>
+                                    <p class="about">Chrome is a fast, simple, and secure web browser, built for the modern web. Chrome OS is an operating system that provides a fast, simple, and more secure computing experience for people who spend most of their time on the web. They are, respectively, built upon Chromium and Chromium OS open source projects. Together, Chrome and Chrome OS aim to move the web forward and to provide a unified browsing experience for your computer, phone and tablet.</p>
                                 </li>                                 
                             </ul>
                         </div>
@@ -1154,6 +1158,7 @@
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
+                                <li><a href="//publisoft.com.br/" rel="external" title="Publisoft" class="publisoft ir">Publisoft</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
