--- a/index.html
+++ b/index.html
@@ -813,7 +813,11 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Renato Mangini</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">Where modern front-end tooling has gone</em>
+                                        </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>                                            
+                                        <div class="about">
+                                            <p>Desenvolver uma app moderna em uma empresa de verdade exige um conjunto bom de ferramentas. Em especial em front-end, por causa do enorme universo de frameworks e bibliotecas. Nesta apresentação vamos apresentar o Yeoman, um gentil trabalhador inglês disposto a ajudar na ingrata mas importante tarefa de conectar e mover as engrenagens que permitem à sua app brilhar.</p>                                                                                        
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -1104,7 +1108,7 @@
                                     <strong class="sponsor">
                                         <a href="//developers.google.com/chrome/" rel="external" title="visite o site do Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>
-                                    <p class="about">Google Inc. é uma multinacional Norte Americana especializada em produtos e serviços relacionados a internet. Esses serviços incluem busca, cloud computing, software e tecnologias de anuncios online. A maior parte do seu lucro é oriundo dos AdWords.</p>
+                                    <p class="about">Chrome é um browser rápido, simples e seguro criado para a web moderna. Chrome OS é o Sistema Operacional que oferece uma experiência mais rápida, simples e mais segura para pessoas que passam a maior parte do seu tempo navegando na web. São construídos respectivamente sobre os projetos Open Source Chromium e Chromium OS. Juntos, Chrome e Chrome OS se esforçam para um crescimento da web e para oferecer uma experiência unificada para seu computador, celular e tablet.</p>
                                 </li>                                
                             </ul>
                         </div>
@@ -1159,6 +1163,7 @@
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
+                                <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
                             </ul>
                         </div>                                                
                     </div>          				    
