Adding Angus and Marcels talks titles

--- a/en/index.html
+++ b/en/index.html
@@ -800,7 +800,7 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Marcel Duran &amp;&amp; Angus Croll</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak"><em class="speak">Performance as a Twitter feature &amp;&amp; Learning to fly - Twitter Flight and mixin</em></em>                                            
                                         </div>
                                     </td>                                   
                                 </tr> 
