--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Marcel Duran &amp;&amp; Angus Croll</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">Performance as a Twitter feature &amp;&amp; Learning to fly - Twitter Flight and mixin</em>                                            
                                         </div>
                                     </td>                                   
                                 </tr> 
