Changing text-descriptions and a few images

--- a/en/index.html
+++ b/en/index.html
@@ -1104,7 +1104,13 @@
                                         <a href="//developers.google.com/chrome/" rel="external" title="visit Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>                                    
                                     <p class="about">Chrome is a fast, simple, and secure web browser, built for the modern web. Chrome OS is an operating system that provides a fast, simple, and more secure computing experience for people who spend most of their time on the web. They are, respectively, built upon Chromium and Chromium OS open source projects. Together, Chrome and Chrome OS aim to move the web forward and to provide a unified browsing experience for your computer, phone and tablet.</p>
-                                </li>                                 
+                                </li>
+                                <li class="microsoft">
+                                    <strong class="sponsor">
+                                        <a href="//modern.ie" rel="external" title="Teste mais f&#225;cil no Internet Explorer | modern.IE" class="sponsors-general">Modern.IE</a>    
+                                    </strong>
+                                    <p class="about">Introducing modern.IE, a set of tools and resources from Microsoft to help you support modern and older versions of Internet Explorer. Download Virtual Machines for Windows, Mac and Linux. Test your site on different browsers and scan your site for common coding patterns that could cause compatibility issues. Spend less time testing, and more time building what’s next.</p>
+                                </li>                                                                    
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1159,6 +1165,7 @@
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                                 <li><a href="//publisoft.com.br/" rel="external" title="Publisoft" class="publisoft ir">Publisoft</a></li>
+                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
