--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,14 @@
                                     <strong class="sponsor">
                                         <a href="//developers.google.com/chrome/" rel="external" title="visite o site do Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>
-                                    <p class="about">Chrome é um browser rápido, simples e seguro criado para a web moderna. Chrome OS é o Sistema Operacional que oferece uma experiência mais rápida, simples e mais segura para pessoas que passam a maior parte do seu tempo navegando na web. São construídos respectivamente sobre os projetos Open Source Chromium e Chromium OS. Juntos, Chrome e Chrome OS se esforçam para um crescimento da web e para oferecer uma experiência unificada para seu computador, celular e tablet.</p>
-                                </li>                                
+                                    <p class="about">Chrome is a fast, simple, and secure web browser, built for the modern web. Chrome OS is an operating system that provides a fast, simple, and more secure computing experience for people who spend most of their time on the web. They are, respectively, built upon Chromium and Chromium OS open source projects. Together, Chrome and Chrome OS aim to move the web forward and to provide a unified browsing experience for your computer, phone and tablet.</p>
+                                </li>
+                                <li class="microsoft">
+                                    <strong class="sponsor">
+                                        <a href="//modern.ie" rel="external" title="Teste mais f&#225;cil no Internet Explorer | modern.IE" class="sponsors-general">Modern.IE</a>    
+                                    </strong>
+                                    <p class="about">Apresentando o modern.IE, um grupo de ferramentas e recursos criados pela Microsoft para ajudar você a manter versões modernas e antigas do Internet Explorer. Faça o download das máquinas virtuais para Windows, Mac e Linux! Faça o teste de seu site em diferentes navegadores e encontre padrões de código conhecidos por causar problemas de compatibilidade. Gaste menos tempo testando, e mais tempo construindo o que está por vir!</p>
+                                </li>                                                                
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1164,6 +1170,7 @@
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                                 <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
+                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                             </ul>
                         </div>                                                
                     </div>          				    
